--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   flutter_clean_architecture: ^5.0.4
+  flutter_bloc: ^8.1.2
+  http: ^0.13.5
+  get_it: ^7.2.0
+  go_router: ^6.2.0
 
 dev_dependencies:
   flutter_test:
